# memory-graph

./: .gitignore  BOOTSTRAP.md  README.md  agent_memory_client.py  api_server.py  config.py  db_operations.py  db_schema.py  db_utils.py  embeddings.py  harness.md  plan-memoryGraphFlaskApi.prompt.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
agent/: CLAUDE.md
agent/hooks/: pre-compact.sh  session-end.sh  session-start.sh
blueprints/: _params.py  action_log.py  autonomy.py  conversations.py  goals.py  kv.py  memory.py  search.py  utility.py
docs/: agent-memory-ops.md  api-gaps.md  architecture.md  conversation-outcomes.md  phase1-2-consolidated.md  phase1a.md  phase1b.md  phase1c.md  phase1d.md  phase2a.md  phase2b.md  phase2c.md  phase2d.md  phase3-backlog.md  phase3-consolidated.md  phase3-overview.md  phase3a-pr-chunks.md  phase3a.md  phase3b.md  phase3c.md  refactor-service-layer.md  roadmap.md  vision.md
docs/adr/: 0001-keep-one-local-service.md  0002-substrate-not-harness-runtime.md  README.md
docs/deep-dive/: README.md  agent-operation-surfaces.md  bridge-primitives.md  lifecycle-and-trust.md  operations-and-maintenance.md  retrieval-contracts.md  write-atomicity.md
docs/plans/: README.md  explicit-retrieval-profiles.md  harness-v2-bridge-primitives.md  pydantic-service-boundary-validation.md  sprint-a-memory-signal-adoption.md  sprint-b-stale-private-memory-cleanup.md  sprint-c-operational-maintenance-follow-ons.md  transactional-write-guarantees.md
docs/superpowers/plans/: 2026-04-23-backup-restore.md  2026-04-23-conversations-summarize-keywords.md  2026-04-23-proposals-worldmodel.md  2026-04-23-self-evolving-crud.md
services/: _constants.py  action_log_service.py  autonomy_checkpoint_service.py  goal_service.py  hybrid_search_service.py  memory_lifecycle_service.py  memory_request_models.py  memory_retrieval_service.py  memory_write_service.py  ops_metrics_service.py
static/: index.html
storage/: _utils.py  action_log_repository.py  autonomy_checkpoint_repository.py  conversation_repository.py  embedding_repository.py  entity_repository.py  goal_repository.py  kv_repository.py  memory_repository.py  metrics_repository.py
tests/: conftest.py  test_action_log.py  test_agent_operation_integration.py  test_app_integration.py  test_autonomy.py  test_bridge_idempotency_race.py  test_config.py  test_conversations.py  test_db_operations.py  test_db_schema.py  test_embeddings.py  test_goals.py  test_harness_bridge_integration.py  test_kv.py  test_live_server.py  test_live_server_e2e.py  test_memory.py  test_memory_request_models_bridge.py  test_search.py  test_utility.py
