[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-graph"
version = "0.1.0"
description = "Local-first Flask REST API for persistent agent memory"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlite-utils>=3.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100
output-format = "grouped"
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C90",    # mccabe
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific
    "PLC",    # pylint convention
    "PLE",    # pylint error
    "PLW",    # pylint warning
]
ignore = [
    "E501",    # line too long (covered by line-length)
    "UP007",   # use | instead of Union (Python 3.10+, but we support 3.9)
    "A003",    # class attribute shadowing builtins (often acceptable)
    "SIM105",  # use try-except instead of contextlib.suppress (subjective)
    "PLW0613", # unused argument
]
unfixable = [
    "F401",    # unused imports (manual review)
    "F841",    # unused variables (manual review)
]

[tool.ruff.lint.isort]
known-first-party = ["db_schema", "db_operations", "db_utils", "embeddings", "config", "api_server"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR0913",  # too many arguments
    "PLR0914",  # too many local variables
    "PLR0915",  # too many statements
]
"conftest.py" = [
    "PLR0913",  # too many arguments (pytest fixtures)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: end-to-end tests that require external services or long setup",
    "slow: slow tests",
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
