[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-graph"
version = "0.1.0"
description = "Local-first Flask REST API for persistent agent memory"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0.0",
    "sqlite-utils>=3.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["blueprints", "storage", "services"]
py-modules = ["api_server", "config", "db_schema", "db_utils", "embeddings"]


[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100
output-format = "grouped"
fix = true

[tool.ruff.lint.isort]
known-first-party = ["db_schema", "db_utils", "embeddings", "config", "api_server", "storage", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: end-to-end tests that require external services or long setup",
    "slow: slow tests",
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
